--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,265 @@
 .zonst-switch-system {
+  // zonst-switch-system 作用域下的scss变量
+  color-scheme: light;
+  --el-color-white: #ffffff;
+  --el-color-black: #000000;
+  --el-color-primary: #409eff;
+  --el-color-primary-light-3: #79bbff;
+  --el-color-primary-light-5: #a0cfff;
+  --el-color-primary-light-7: #c6e2ff;
+  --el-color-primary-light-8: #d9ecff;
+  --el-color-primary-light-9: #ecf5ff;
+  --el-color-primary-dark-2: #337ecc;
+  // --el-color-success: #67c23a;
+  // --el-color-success-light-3: #95d475;
+  // --el-color-success-light-5: #b3e19d;
+  // --el-color-success-light-7: #d1edc4;
+  // --el-color-success-light-8: #e1f3d8;
+  // --el-color-success-light-9: #f0f9eb;
+  // --el-color-success-dark-2: #529b2e;
+  // --el-color-warning: #e6a23c;
+  // --el-color-warning-light-3: #eebe77;
+  // --el-color-warning-light-5: #f3d19e;
+  // --el-color-warning-light-7: #f8e3c5;
+  // --el-color-warning-light-8: #faecd8;
+  // --el-color-warning-light-9: #fdf6ec;
+  // --el-color-warning-dark-2: #b88230;
+  // --el-color-danger: #f56c6c;
+  // --el-color-danger-light-3: #f89898;
+  // --el-color-danger-light-5: #fab6b6;
+  // --el-color-danger-light-7: #fcd3d3;
+  // --el-color-danger-light-8: #fde2e2;
+  // --el-color-danger-light-9: #fef0f0;
+  // --el-color-danger-dark-2: #c45656;
+  // --el-color-error: #f56c6c;
+  // --el-color-error-light-3: #f89898;
+  // --el-color-error-light-5: #fab6b6;
+  // --el-color-error-light-7: #fcd3d3;
+  // --el-color-error-light-8: #fde2e2;
+  // --el-color-error-light-9: #fef0f0;
+  // --el-color-error-dark-2: #c45656;
+  // --el-color-info: #909399;
+  // --el-color-info-light-3: #b1b3b8;
+  // --el-color-info-light-5: #c8c9cc;
+  // --el-color-info-light-7: #dedfe0;
+  // --el-color-info-light-8: #e9e9eb;
+  // --el-color-info-light-9: #f4f4f5;
+  // --el-color-info-dark-2: #73767a;
+  // --el-bg-color: #ffffff;
+  // --el-bg-color-page: #f2f3f5;
+  // --el-bg-color-overlay: #ffffff;
+  --el-text-color-primary: #303133;
+  --el-text-color-placeholder: #a8abb2;
+  --el-text-color-disabled: #c0c4cc;
+  --el-border-color: #dcdfe6;
+  --el-border-color-light: #e4e7ed;
+  --el-border-color-lighter: #ebeef5;
+  --el-border-color-extra-light: #f2f6fc;
+  --el-border-color-dark: #d4d7de;
+  --el-border-color-darker: #cdd0d6;
+  --el-fill-color: #f0f2f5;
+  --el-fill-color-light: #f5f7fa;
+  --el-fill-color-lighter: #fafafa;
+  --el-fill-color-extra-light: #fafcff;
+  --el-fill-color-dark: #ebedf0;
+  --el-fill-color-darker: #e6e8eb;
+  --el-fill-color-blank: #ffffff;
+  --el-box-shadow: 0px 12px 32px 4px rgba(0, 0, 0, .04), 0px 8px 20px rgba(0, 0, 0, .08);
+  --el-box-shadow-light: 0px 0px 12px rgba(0, 0, 0, .12);
+  --el-box-shadow-lighter: 0px 0px 6px rgba(0, 0, 0, .12);
+  --el-box-shadow-dark: 0px 16px 48px 16px rgba(0, 0, 0, .08), 0px 12px 32px rgba(0, 0, 0, .12), 0px 8px 16px -8px rgba(0, 0, 0, .16);
+  --el-disabled-bg-color: var(--el-fill-color-light);
+  --el-disabled-text-color: var(--el-text-color-placeholder);
+  --el-disabled-border-color: var(--el-border-color-light);
+  --el-overlay-color: rgba(0, 0, 0, .8);
+  --el-overlay-color-light: rgba(0, 0, 0, .7);
+  --el-overlay-color-lighter: rgba(0, 0, 0, .5);
+  --el-mask-color: rgba(255, 255, 255, .9);
+  --el-mask-color-extra-light: rgba(255, 255, 255, .3);
+  --el-border-width: 1px;
+  --el-border-style: solid;
+  --el-border-color-hover: var(--el-text-color-disabled);
+  --el-border: var(--el-border-width) var(--el-border-style) var(--el-border-color);
+  --el-svg-monochrome-grey: var(--el-border-color);
+  --el-dialog-padding-primary: 20px;
+  --el-dialog-content-font-size: 14px;
+  --el-button-text-color: #606266;
+  --el-button-font-weight: 500;
+  --el-button-bg-color: #ffffff;
+  --el-border-width: 1px;
+  --el-border-style: solid;
+  --el-border-color: #dcdfe6;
+  --el-border: var(--el-border-width) var(--el-border-style) var(--el-border-color);
+  --el-button-border-color: #dcdfe6;
+  --el-font-size-base: 14px;
+  --el-border-radius-base: 4px;
+  --el-button-hover-text-color: var(--el-color-primary);
+  --el-button-font-weight: var(--el-font-weight-primary);
+  --el-button-border-color: var(--el-border-color);
+  --el-button-bg-color: var(--el-fill-color-blank);
+  --el-button-text-color: var(--el-text-color-regular);
+  --el-button-disabled-text-color: var(--el-disabled-text-color);
+  --el-button-disabled-bg-color: var(--el-fill-color-blank);
+  --el-button-disabled-border-color: var(--el-border-color-light);
+  --el-button-divide-border-color: rgba(255, 255, 255, .5);
+  --el-button-hover-bg-color: var(--el-color-primary-light-9);
+  --el-button-hover-border-color: var(--el-color-primary-light-7);
+  --el-button-active-text-color: var(--el-button-hover-text-color);
+  --el-button-active-border-color: var(--el-color-primary);
+  --el-button-active-bg-color: var(--el-button-hover-bg-color);
+  --el-button-outline-color: var(--el-color-primary-light-5);
+  --el-button-hover-link-text-color: var(--el-color-info);
+  --el-button-active-color: var(--el-text-color-primary);
+}
+
+.zonst-switch-system {
   position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2099;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5);
+  overflow: auto;
+  .el-overlay-dialog {
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 2099;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 50%);
     overflow: auto;
+    display: flex;
+    .el-dialog {
+      // dialog
+      width: 60%;
+      background: #FFF;
+      // padding: 32px 24px 96px;
+      position: relative;
+      // margin: 15vh auto 50px;
+      margin: auto;
+      border-radius: 10px;
+      box-shadow:  0px 12px 32px 4px rgba(0, 0, 0, .04), 0px 8px 20px rgba(0, 0, 0, .08);
+      box-sizing: border-box;
+      .el-dialog__header {
+        // header
+        padding: 20px;
+        padding-bottom: 10px;
+        margin-right: 16px;
+        .el-dialog__title {
+          // 标题
+          line-height: 24px;
+          font-size: 18px;
+          color: #303133;
+        }
+        .el-dialog__headerbtn {
+          // 关闭按钮
+          position: absolute;
+          top: 6px;
+          right: 0;
+          padding: 0;
+          width: 54px;
+          height: 54px;
+          background: transparent;
+          border: none;
+          outline: none;
+          cursor: pointer;
+          overflow: visible;
+          font-size: var(--el-dialog-content-font-size);
+          .el-dialog__close {
+            color: #909399;
+            font-size: inherit;
+            height: 1em;
+            width: 1em;
+            line-height: 1em;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            fill: currentColor;
+            svg {
+              height: 1em;
+               width: 1em;
+            }
+          }
+        }
+      }
+      .el-dialog__body {
+        // dialog_body
+        padding: calc(var(--el-dialog-padding-primary) + 10px) var(--el-dialog-padding-primary);
+        color: var(--el-text-color-regular);
+        font-size: var(--el-dialog-content-font-size);
+      }
+      .el-dialog__footer {
+        // dialog_footer
+        padding: var(--el-dialog-padding-primary);
+        padding-top: 10px;
+        text-align: right;
+        box-sizing: border-box;
+        button:first-child {
+          margin-right: 10px;
+        }
+        .el-button+.el-button {
+          margin-left: 12px;
+        }
+        .el-button {
+          display: inline-flex;
+          justify-content: center;
+          align-items: center;
+          line-height: 1;
+          height: 32px;
+          white-space: nowrap;
+          cursor: pointer;
+          color: var(--el-button-text-color);
+          text-align: center;
+          box-sizing: border-box;
+          outline: none;
+          transition: .1s;
+          font-weight: var(--el-button-font-weight);
+          user-select: none;
+          vertical-align: middle;
+          -webkit-appearance: none;
+          background-color: var(--el-button-bg-color);
+          border: var(--el-border);
+          border-color: var(--el-button-border-color);
+          padding: 8px 15px;
+          font-size: var(--el-font-size-base);
+          border-radius: var(--el-border-radius-base);
+        }
+        .el-button--primary {
+          --el-button-text-color: var(--el-color-white);
+          --el-button-bg-color: var(--el-color-primary);
+          --el-button-border-color: var(--el-color-primary);
+          --el-button-outline-color: var(--el-color-primary-light-5);
+          --el-button-active-color: var(--el-color-primary-dark-2);
+          --el-button-hover-text-color: var(--el-color-white);
+          --el-button-active-text-color: var(--el-color-white);
+          --el-button-hover-link-text-color: var(--el-color-primary-light-5);
+          --el-button-hover-bg-color: var(--el-color-primary-light-3);
+          --el-button-hover-border-color: var(--el-color-primary-light-3);
+          --el-button-active-bg-color: var(--el-color-primary-dark-2);
+          --el-button-active-border-color: var(--el-color-primary-dark-2);
+          --el-button-disabled-text-color: var(--el-color-white);
+          --el-button-disabled-bg-color: var(--el-color-primary-light-5);
+          --el-button-disabled-border-color: var(--el-color-primary-light-5);
+        }
+        .el-button:hover, .el-button:focus {
+          color: var(--el-button-hover-text-color);
+          border-color: var(--el-button-hover-border-color);
+          background-color: var(--el-button-hover-bg-color);
+          outline: none;
+        }
+        .el-button:active {
+          color: var(--el-button-active-text-color);
+          border-color: var(--el-button-active-border-color);
+          background-color: var(--el-button-active-bg-color);
+          outline: none;
+        }
+        .el-button>span {
+          display: inline-flex;
+          align-items: center;
+        }
+      }
+    }
+  }
 }
